# open-claw

./: .gitignore  exec-approvals.json  openclaw.json.bak2
cron/: jobs.json
workspace/: .gitignore  AGENTS.md  IDENTITY.md  USER.md  slice_pdf.py
workspace/config/: mcporter.json
workspace/docs/: COMMANDS.md
workspace/resources/: count_notion_status.js  import_leads.js
workspace/scripts/: get_linkedin_batch.js  reset_processing_leads.js
workspace/skills/catalog-extractor/: .env.example  GOAL.md  SKILLS.md  export_assets.py  map_catalog.py  pyproject.toml  run.py  skus.py  synthesize.py
workspace/skills/catalog-extractor/_archive/: extract_ingredients.py  extract_metadata.py
workspace/skills/catalog-extractor/extract/: extract_text_pypdf.py  skus.py  synthesize.py
workspace/skills/catalog-extractor/planner/: initialize_job.py  map_catalog.py  plan.py  slice_pdf.py  utils.py
workspace/skills/crm/: SKILL.md
workspace/skills/linkedIn/: SKILL.md
workspace/skills/linkedInSalesNavigator/: SKILL.md
workspace/skills/linkedInSalesNavigator/.cache/: append_leads_p4.py  sales_nav_data.json
